--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -19,10 +19,6 @@ footer a{
 	background-color: #044687;
 	font-weight: normal;
 }
-.table{
-	margin-top:10px;
-	float:left;
-}
 .table th{
 	text-align: center;
 	background-color: #d44413;
@@ -36,7 +32,8 @@ h3,legend{
 	color: #d44413;
 }
 .Agregar{
-	float:right;
+	float:left;
+	margin-left: 20px;
 }
 .Atras{
 	margin: 30px 0 0 50px;
@@ -48,4 +45,14 @@ h3,legend{
 .view span{
 	color: #d44413;
 	font-weight: bold;
+}
+.Titulo{
+	margin-bottom: 50px;
+}
+.table{
+	margin-bottom: 30px !important;
+}
+.dataTables_paginate a{
+	color: #d44413 !important;
+	font-weight: bold !important;
 }
