--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -237,8 +237,8 @@ h3,legend{
 	color: #d44413;
 }
 .Agregar{
-	float:left;
 	margin-left: 20px;
+    margin-bottom: 30px;
 }
 .Atras{
 	margin: 30px 0 0 50px;
