--- a/app/webroot/css/bootstrap.css
+++ b/app/webroot/css/bootstrap.css
@@ -101,9 +101,9 @@ sub {
 }
 
 img {
-  width: auto\9;
+  /*width: auto\9;
   height: auto;
-  max-width: 100%;
+  max-width: 100%;*/
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
@@ -1027,7 +1027,8 @@ pre code {
 }
 
 form {
-  margin: 0 0 20px;
+  margin: 0 0 20px 50px;
+
 }
 
 fieldset {
